--- a/SpringCloud-Config-dev.properties
+++ b/SpringCloud-Config-dev.properties
@@ -1,8 +1,8 @@
 #指定服务暴露端口号
-server.port=8760
+# server.port=8760
 
-#程序启动名称
-spring.application.name=SpringCloud-Config
+# #程序启动名称
+# spring.application.name=SpringCloud-Config
 
 foo = foo version 21
 #服务注册地址(可有可无)
